<resources>
    <string name="app_name">androidtp</string>
    <string name="product_image">product_image</string>
    <string name="nom_du_produit">Nom du produit</string>
    <string name="prix_du_produit">Prix du produit</string>
    <string name="buttonBack">Retour</string>
    <string name="buttonAddToCart">Ajouter au panier</string>
    <string name="shopping_cart">ShoppingCartButton</string>
    <string name="remove">retirer le produit</string>
    <string name="imagedescription">imageDescription</string>
    <string name="supp">-</string>

    <!-- FragmentBanner -->
    <string name="bannerLogoDescription">LogoRetour</string>
    <string name="bannerCart">Panier</string>
    <string name="bannerHistory">Historique</string>

    <!-- ProductDetail -->
    <string name="titleProduct">Titre : </string>
    <string name="categoryProduct">Catégorie : </string>
    <string name="priceProduct">Prix : </string>
    <string name="descriptionProduct">Description : </string>
    <string name="quantitiyProduct">Quantité : </string>

    <!-- Cart -->
    <string name="totalQuantity">Quantité totale : </string>
    <string name="totalAmount">Montant total : </string>
    <string name="checkout">Payer</string>
    <string name="amountHolder">0.00€</string>
    <string name="quantityHolder">0</string>

    <!-- DialogPayment -->
    <string name="textCreditCardNumber">N° Carte de crédit</string>
    <string name="hintTextCreditCardNumber">4974 0232 2042 1232</string>
    <string name="textCreditCardExpirationDate">Date d\'expiration :</string>
    <string name="hintTextCreditCardExpirationDate">09/26</string>
    <string name="textCreditCardCvv">CVV :</string>
    <string name="hintTextCreditCardCvv">123</string>
    <string name="textCreditCardHolder">Titulaire de la carte :</string>
    <string name="hintTextCreditCardHolder">John Doe</string>
    <string name="textCreditCardAmount">Montant à payer :</string>
    <string name="textCreditCardPay">Procéder au paiement</string>

    <!-- BuyHistory -->
</resources>