<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/textViewCardNumberLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/textCreditCardNumber"
        android:paddingBottom="4dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/editTextCardNumber"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_credit_card"
        android:drawablePadding="8dp"
        android:hint="@string/hintTextCreditCardNumber"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@id/textViewCardNumberLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textViewExpirationDateLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/textCreditCardExpirationDate"
        android:paddingBottom="4dp"
        app:layout_constraintTop_toBottomOf="@id/editTextCardNumber"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/textViewCvvLabel"/>
    <TextView
        android:id="@+id/textViewCvvLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/textCreditCardCvv"
        android:paddingBottom="4dp"
        app:layout_constraintTop_toBottomOf="@id/editTextCardNumber"
        app:layout_constraintStart_toEndOf="@id/textViewExpirationDateLabel"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/editTextExpirationDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hintTextCreditCardExpirationDate"
        android:inputType="date"
        app:layout_constraintTop_toBottomOf="@id/textViewExpirationDateLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/editTextCvv"/>

    <EditText
        android:id="@+id/editTextCvv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hintTextCreditCardCvv"
        android:inputType="numberPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/editTextExpirationDate"
        app:layout_constraintTop_toBottomOf="@id/textViewCvvLabel"
        app:layout_constraintWidth_default="wrap" />

    <TextView
        android:id="@+id/textViewCardHolderLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/textCreditCardHolder"
        android:paddingTop="16dp"
        android:paddingBottom="4dp"
        app:layout_constraintTop_toBottomOf="@id/editTextExpirationDate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/editTextCardHolder"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hintTextCreditCardHolder"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/textViewCardHolderLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/idBuyBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/textCreditCardPay"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/editTextCardHolder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
