<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize"
    android:background="@color/background"
    android:paddingHorizontal="16dp"
    android:gravity="center_vertical"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="80dp"
        android:layout_height="match_parent"
        android:layout_marginEnd="5dp"
        app:srcCompat="@drawable/logo"
        tools:srcCompat="@drawable/logo"
        android:contentDescription="@string/bannerLogoDescription" />

    <EditText
        android:id="@+id/searchEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:minHeight="48dp"
        android:tint="@color/itemsBlanc"
        tools:visibility="invisible" />

    <ImageView
        android:id="@+id/cartImageView"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/ic_shopping_cart"
        android:contentDescription="@string/bannerCart"
        app:tint="@color/itemsBlanc" />

    <ImageView
        android:id="@+id/accountImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/bannerHistory"
        android:src="@drawable/ic_history_icon" />

</LinearLayout>